--- a/Info.plist
+++ b/Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>Wired2.0</string>
+	<string>WiredServer2.0</string>
 	<key>CFBundleIconFile</key>
-	<string>Wired</string>
+	<string>WiredServer</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.zanka.WiredServerP7</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,10 +21,12 @@
 	<key>NSMainNibFile</key>
 	<string>PreferencePane</string>
 	<key>NSPrefPaneIconFile</key>
-	<string>Wired.tiff</string>
+	<string>WiredServer.tiff</string>
 	<key>NSPrefPaneIconLabel</key>
-	<string>Wired 2.0</string>
+	<string>Wired Server 2.0</string>
 	<key>NSPrincipalClass</key>
 	<string>WPPreferencePane</string>
+	<key>SUPublicDSAKeyFile</key>
+	<string>SUPublicDSAKeyFile.pem</string>
 </dict>
 </plist>
